tests/purs/passing/ESFFIFunctionVar.js
export var functionName = function (a) {
  return a;
}
